# jasper

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  ChangeLog  INSTALL  INSTALL.txt  Makefile.am  Makefile.in  NEWS  NEWS.txt  README  README.md  _config.yml  appveyor.yml  configure  configure.ac  index.md  notes.txt
.github/workflows/: ci.yml  deploy_manual.yml  release.yml  win_ci.yml
ac_m4/: m4_ax_c99_inline.m4  m4_ax_c_arithmetic_rshift.m4  m4_ax_cflags_strict_prototypes.m4  m4_ax_compiler_flags_cflags.m4
ci/appveyor/: build.bat
ci/travis/: build
cmake/modules/: FindMakeDist.cmake  InSourceBuild.cmake  Sanitizers.cmake
data/test/bad/: 318.jpc  383.heic  poc_402.jpc  poc_403.jpc
data/test/other/: poc_400.pnm  poc_401.pnm
doc/: CMakeLists.txt  Doxyfile.in
doc/src/: applications.dox  apps.dox  apps_imgcmp.dox  apps_imginfo.dox  apps_jasper.dox  apps_jiv.dox  bugs.dox  codecs.dox  faq.dox  getting_started.dox.in  images.dox  initialization.dox  install.dox.in  intro.dox  introduction.dox  lib.dox  lib_images.dox  lib_init.dox  lib_iostreams.dox  lib_log.dox  lib_math.dox  lib_misc.dox  lib_streams.dox  lib_string.dox  lib_threads.dox  lib_timers.dox  license.dox  license.dox.in  mainpage.dox.in  modules.dox  overview.dox  overview.dox.in  references.bib  software.dox  streams.dox
doc/src/unused/: library.dox  software.dox
joss_paper/: Makefile  build_paper  draft-pdf.yml  paper.bib  paper.md
pkgconfig/: .gitignore  Makefile.am
src/: Makefile.in
src/app/: CMakeLists.txt  imgcmp.1  imgcmp.c  imginfo.1  imginfo.c  jasper.1  jasper.c  jiv.1  jiv.c  multithread.c  test_1.c  tmrdemo.c
src/appl/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  dummy2.c  fuzz.c  imgcmp.c  imginfo.c  jasper.c  jiv.c  multithread.c  run_test_1  tmrdemo.c
src/libjasper/: CMakeLists.txt  Makefile.in
src/libjasper/base/: CMakeLists.txt  Makefile.am  Makefile.in  jas_cm.c  jas_conf.c  jas_debug.c  jas_getopt.c  jas_icc.c  jas_iccdata.c  jas_image.c  jas_init.c  jas_malloc.c  jas_seq.c  jas_stream.c  jas_string.c  jas_tmr.c  jas_tvp.c  jas_version.c
src/libjasper/bmp/: CMakeLists.txt  Makefile.am  Makefile.in  bmp_cod.c  bmp_dec.c  bmp_enc.c
src/libjasper/heic/: heic_dec.c  heic_enc.c  heic_val.c
src/libjasper/include/: Makefile.in
src/libjasper/include/jasper/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  jas_cm.h  jas_compiler.h  jas_conf.h  jas_config.h  jas_config.h.in  jas_config2.h  jas_debug.h  jas_dll.h  jas_fix.h  jas_getopt.h  jas_icc.h  jas_image.h  jas_init.h  jas_log.h  jas_malloc.h  jas_math.h  jas_seq.h  jas_stream.h  jas_string.h  jas_thread.h  jas_tmr.h  jas_tvp.h  jas_types.h  jas_version.h  jasper.h
src/libjasper/jp2/: CMakeLists.txt  Makefile.am  Makefile.in  jp2_cod.c  jp2_cod.h  jp2_dec.c  jp2_enc.c
src/libjasper/jpc/: CMakeLists.txt  Makefile.am  Makefile.in  jpc_bs.c  jpc_bs.h  jpc_cod.c  jpc_cs.c  jpc_cs.h  jpc_dec.c  jpc_dec.h  jpc_enc.c  jpc_enc.h  jpc_fix.h  jpc_math.c  jpc_math.h  jpc_mct.c  jpc_mct.h  jpc_mqcod.c  jpc_mqdec.c  jpc_mqdec.h  jpc_mqenc.c  jpc_mqenc.h  jpc_qmfb.c  jpc_qmfb.h  jpc_t1cod.c  jpc_t1cod.h  jpc_t1dec.c  jpc_t1enc.c  jpc_t1enc.h  jpc_t2cod.c  jpc_t2cod.h  jpc_t2dec.c  jpc_t2enc.c  jpc_t2enc.h  jpc_tagtree.c  jpc_tsfb.c  jpc_tsfb.h  jpc_util.c  jpc_util.h
src/libjasper/jpg/: CMakeLists.txt  Makefile.am  Makefile.in  jpg_dec.c  jpg_dummy.c  jpg_enc.c  jpg_val.c
src/libjasper/mif/: CMakeLists.txt  Makefile.am  Makefile.in  mif_cod.c
src/libjasper/pgx/: CMakeLists.txt  Makefile.am  Makefile.in  pgx_cod.c  pgx_dec.c  pgx_enc.c
src/libjasper/pnm/: CMakeLists.txt  Makefile.am  Makefile.in  pnm_cod.c  pnm_dec.c  pnm_enc.c
src/libjasper/ras/: CMakeLists.txt  Makefile.am  Makefile.in  ras_dec.c  ras_enc.c
src/msvc/: Makefile.am  Makefile.in  README  imgcmp.vcxproj  imginfo.vcxproj  jasper.sln  jasper.vcxproj  jiv.vcxproj  libjasper.vcxproj  lj.proj
test/: Makefile.am
test/src/: CMakeLists.txt  app.c
